--- a/app/src/main/res/layout/fragment_start_survey.xml
+++ b/app/src/main/res/layout/fragment_start_survey.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/appBackground"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/appBackground">
+        android:layout_height="match_parent">
+
 
         <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:id="@+id/surveyTitle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="72dp"
+            android:layout_marginEnd="50dp"
             android:fontFamily="@font/muli_bold"
-            android:text="@string/happy_monday"
+            android:text="@string/start_wellness_survey"
+            android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -22,20 +27,19 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView2"
-            android:textAlignment="center"
+            android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="75dp"
             android:layout_marginEnd="75dp"
-            android:fontFamily="@font/muli"
-            android:maxLines="20"
-            android:text="@string/you_haven_t_taken_your_survey_yet_tap_below_to_start"
-            android:textSize="25sp"
+            android:lines="2"
+            android:text="@string/tap_start_now_and_leave_the_sensor"
+            android:textAlignment="center"
+            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/surveyTitle" />
 
         <Button
             android:id="@+id/button"
@@ -51,6 +55,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
