Created the Heart Rate Screen

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="72dp"
+            android:layout_marginTop="30dp"
             android:fontFamily="@font/muli_bold"
             android:text="@string/happy_monday"
             android:textColor="@color/white"
@@ -32,19 +32,19 @@
             android:maxLines="20"
             android:text="@string/you_haven_t_taken_your_survey_yet_tap_below_to_start"
             android:textSize="25sp"
-            app:layout_constraintBottom_toTopOf="@+id/button"
+            app:layout_constraintBottom_toTopOf="@+id/startNow"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/startNow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
-            android:layout_marginBottom="32dp"
-            android:height="40pt"
+            android:layout_marginBottom="20dp"
+            android:height="30pt"
             android:fontFamily="@font/muli_bold"
             android:text="@string/start_now"
             android:textSize="24sp"
