--- a/app/src/main/res/layout/fragment_start_survey.xml
+++ b/app/src/main/res/layout/fragment_start_survey.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
-            android:layout_marginTop="72dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="50dp"
             android:fontFamily="@font/muli_bold"
             android:text="@string/start_wellness_survey"
@@ -36,19 +36,19 @@
             android:text="@string/tap_start_now_and_leave_the_sensor"
             android:textAlignment="center"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/button"
+            app:layout_constraintBottom_toTopOf="@+id/startNow"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/surveyTitle" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/startNow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
-            android:layout_marginBottom="32dp"
-            android:height="40pt"
+            android:layout_marginBottom="20dp"
+            android:height="30pt"
             android:fontFamily="@font/muli_bold"
             android:text="@string/start_now"
             android:textSize="24sp"
