--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#484848</color>
+    <color name="colorAccent">#FFFFFF</color>
     <color name="appBackground">#212121</color>
     <color name="white">#FFFFFF</color>
 </resources>
