Completed Most Screens

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
@@ -38,6 +39,6 @@
         android:id="@+id/sleepAnalysisFragment"
         android:name="com.oneonefivedigitalcreations.easyhrv.survey.sleepanalysis.SleepAnalysisFragment"
         android:label="SleepAnalysisFragment"
-        tools:layout="@layout/fragment_sleep_analysis"/>
+        tools:layout="@layout/fragment_sleep_analysis" />
 
 </navigation>
