--- a/app/src/main/res/layout/fragment_heart_rate_analysis.xml
+++ b/app/src/main/res/layout/fragment_heart_rate_analysis.xml
@@ -5,9 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/appBackground"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/appBackground">
 
         <TextView
             android:id="@+id/surveyTitle"
@@ -30,13 +30,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
+            android:contentDescription="@string/an_image_of_a_heart"
             android:minWidth="115dp"
             android:minHeight="120dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/surveyTitle"
-            app:srcCompat="@drawable/ic_action_name"
-            android:contentDescription="@string/an_image_of_a_heart" />
+            app:srcCompat="@drawable/ic_action_name" />
 
         <LinearLayout
             android:id="@+id/linearLayout2"
