--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -23,7 +22,6 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="75dp"
@@ -31,6 +29,7 @@
             android:fontFamily="@font/muli"
             android:maxLines="20"
             android:text="@string/you_haven_t_taken_your_survey_yet_tap_below_to_start"
+            android:textAlignment="center"
             android:textSize="25sp"
             app:layout_constraintBottom_toTopOf="@+id/startNow"
             app:layout_constraintEnd_toEndOf="parent"
