--- a/app/src/main/res/menu/navdrawer.xml
+++ b/app/src/main/res/menu/navdrawer.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/startSurveyFragment"
         android:icon="@android:drawable/ic_menu_info_details"
-        android:title="About" />
+        android:title="@string/about" />
 </menu>
