--- a/app/src/main/res/layout/fragment_heart_rate_analysis.xml
+++ b/app/src/main/res/layout/fragment_heart_rate_analysis.xml
@@ -25,11 +25,11 @@
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="40dp"
                 android:contentDescription="@string/an_image_of_a_heart"
                 android:minWidth="115dp"
                 android:minHeight="120dp"
-                app:srcCompat="@drawable/ic_action_name"
-                android:layout_marginBottom="40dp"/>
+                app:srcCompat="@drawable/ic_action_name" />
 
             <TextView
                 android:id="@+id/heartRateTitle"
